# SoftwareDesignCpp

./: .gitignore  CMakeLists.txt
CH_01/Program1.1-Mak-Changes/: CMakeLists.txt  Car.cpp
CH_01/Program1.2-Mak-Complexity/: CMakeLists.txt
CH_01/Program1.3-Mak-Inflexible/: CMakeLists.txt
CH_01/Program1.4-Mak-Surprise/: CMakeLists.txt
CH_02/Program2.1-Mak-Books-1/: CMakeLists.txt
CH_02/Program2.2-Mak-Books-2/: CMakeLists.txt
CH_02/Program2.3-Mak-Books-3/: CMakeLists.txt
